--- a/public/index.html
+++ b/public/index.html
@@ -138,37 +138,36 @@
   </head>
   <body>
     <header>
-      <h1>Cloudflare AI Chat</h1>
-      <p>Powered by Cloudflare Workers AI</p>
+      <h1>Mesaje catre IP-TV RO</h1>
+      <p>IP-TV AI system</p>
     </header>
 
     <div class="chat-container">
       <div id="chat-messages" class="chat-messages">
         <div class="message assistant-message">
           <p>
-            Hello! I'm an LLM chat app powered by Cloudflare Workers AI. How can
-            I help you today?
+            Salut , lucrez aici pentru IP-TV Romania , cu ce te pot ajuta ?
           </p>
         </div>
       </div>
 
       <div class="typing-indicator" id="typing-indicator">
-        AI is thinking...
+        Ma gandesc ...
       </div>
 
       <div class="message-input">
         <textarea
           id="user-input"
-          placeholder="Type your message here..."
+          placeholder="Scrie mesajul tau aici..."
           rows="1"
           autofocus
         ></textarea>
-        <button id="send-button">Send</button>
+        <button id="send-button">Trimite</button>
       </div>
     </div>
 
     <footer>
-      <p>Cloudflare Workers AI Chat Template &copy; 2025</p>
+      <p>IP-TV RO AI systems &copy; 2025</p>
     </footer>
 
     <!-- Chat app script -->
